新增注册验证
